ACtivity table completed

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -359,6 +359,7 @@
         invalidOptionWarnings: false,
         height: height,
         groupBy: "type",
+        //placeholder: "No data",
         virtualDom: true,
         tooltipsHeader: true,
         layout: "fitColumns", //fit columns to width of table (optional)
@@ -374,6 +375,7 @@
         button: "btnActivitiesTable",
         invalidOptionWarnings: false,
         height: height,
+        //placeholder: "No data",
         tooltipsHeader: true,
         virtualDom: true,
         layout: "fitColumns", //fit columns to width of table (optional)
