--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="./messages.js"></script>
     <script type="text/javascript" src="./lib/apexcharts.js"></script>
     <script type="text/javascript" src="./lib/chartjs-chart-box-and-violin-plot.js"></script>
+    <script type="text/javascript" src="./lib/chartjs-plugin-datalabels.js"></script>
     <script type="text/javascript" src="./lib/tabulator.js"></script>
 
 
@@ -23,6 +24,8 @@
     <div class="pestañas" id="grade_tabs">
         <input type="button" class="btn" id="btnLine" onclick='javaConnector.updateCharts("LINE");' />
         <input type="button" class="btn" id="btnRadar" onclick='javaConnector.updateCharts("RADAR");' />
+        <input type="button" class="btn" id="btnCalificationBar"
+            onclick='javaConnector.updateCharts("CALIFICATION_BAR");' />
         <input type="button" class="btn" id="btnBoxPlot" onclick='javaConnector.updateCharts("GENERAL_BOXPLOT");' />
         <input type="button" class="btn" id="btnBoxPlotGroup" onclick='javaConnector.updateCharts("GROUP_BOXPLOT");' />
         <input type="button" class="btn" id="btnViolin" onclick='javaConnector.updateCharts("GENERAL_VIOLIN");' />
@@ -75,6 +78,9 @@
     Chart.defaults.scale.ticks.suggestedMax = 10;
     Chart.defaults.scale.ticks.suggestedMin = 0;
     Chart.defaults.scale.autoSkip = true;
+    Chart.defaults.global.plugins.datalabels.display = false
+
+
     var red = "#DC143C";
     var green = "#2DC214";
     var counter = 0;
@@ -349,6 +355,47 @@
                     }
                 }
             ]
+        }
+    }
+
+
+    var calificationBarOptions = {
+        tab: "grade_tabs",
+        button: "btnCalificationBar",
+        typeGraph: "bar",
+        scales: {
+            xAxes: [{
+                stacked: true
+            }],
+            yAxes: [{
+                stacked: true,
+                ticks: {
+                    stepSize: 0,
+                }
+            }]
+        },
+        tooltips: {
+            mode: "label"
+        },
+        onClick: function (event, array) {
+            //do nothing
+        },
+        plugins: {
+            datalabels: {
+                display: true,
+                formatter: function (value, context) {
+                    if (value === 0 ){
+                        return "";
+                    }
+                    let datasets = context.chart.data.datasets;
+                    let total= 0;
+                    for (i=0;i<datasets.length;i++){
+                        total+=datasets[i].data[context.dataIndex];
+                    }
+
+                    return Math.round(value / total * 10000)/100 +"%";
+                }
+            }
         }
     }
 
