--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -236,14 +236,10 @@
         displayLegendButton(options.useLegend);
         displayGroupButton(options.useGroup);
         displayGeneralButton(options.useGeneral);
-
+		options.legend = {display:options.legendActive};
         if (myChart.config.type == options.typeGraph) {
             myChart.data = dataset;
             myChart.options = options;
-            if(myChart.options.legend ==null){
-            	myChart.options.legend = {};
-            }
-            myChart.options.legend.display = options.legendActive;
             myChart.update();        
             
             
