Delete lib folder

--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/tabulator.css" />
     <link rel="stylesheet" type="text/css" href="../css/chart.css" />
 
-    <script type="text/javascript" src="./lib/moment.js"></script>
+    <script type="text/javascript" src="./lib/moment-with-locale.js"></script>
     <script type="text/javascript" src="./lib/Chart.js"></script>
     <script type="text/javascript" src="./lib/color-hash.js"></script>
     <script type="text/javascript" src="./lib/html2canvas.js"></script>
