--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -39,6 +39,8 @@
         <input type="button" class="btn" id="HEAT_MAP" onclick='javaConnector.updateCharts("HEAT_MAP");' />
         <input type="button" class="btn" id="CUM_LINE" onclick='javaConnector.updateCharts("CUM_LINE");' />
         <input type="button" class="btn" id="MEAN_DIFF" onclick='javaConnector.updateCharts("MEAN_DIFF");' />
+        <input type="button" class="btn" id="SCATTER" onclick='javaConnector.updateCharts("SCATTER");' />
+        
 
     </div>
     <div class="pestañas" id="ACTIVITY_COMPLETION">
@@ -378,6 +380,7 @@
 
     function setLocale(newLocale) {
         locale = newLocale;
+        moment.locale(newLocale);
     }
     function colorRGB(color) {
         let colors = colorHash.rgb(color);
