Added new graph and refactorized mainController

--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -40,6 +40,7 @@
         <input type="button" class="btn" id="CUM_LINE" onclick='javaConnector.updateCharts("CUM_LINE");' />
         <input type="button" class="btn" id="MEAN_DIFF" onclick='javaConnector.updateCharts("MEAN_DIFF");' />
         <input type="button" class="btn" id="SCATTER" onclick='javaConnector.updateCharts("SCATTER");' />
+         <input type="button" class="btn" id="SCATTER_USER" onclick='javaConnector.updateCharts("SCATTER_USER");' />
         <input type="button" class="btn" id="TOTAL_BAR" onclick='javaConnector.updateCharts("TOTAL_BAR");' />
         
 
