Exportar la gráfica #23

--- a/resources/graphics/ClusterChart.html
+++ b/resources/graphics/ClusterChart.html
@@ -56,5 +56,9 @@
 		myChart.data = data;
 		myChart.update();
 	}
+	
+	function exportGraphic() {
+		return myChart.toBase64Image();
+	}
 </script>
 </html>
