Added session chart

--- a/src/main/resources/graphics/Charts.html
+++ b/src/main/resources/graphics/Charts.html
@@ -42,6 +42,7 @@
         <input type="button" class="btn" id="SCATTER" onclick='javaConnector.updateCharts("SCATTER");' />
          <input type="button" class="btn" id="SCATTER_USER" onclick='javaConnector.updateCharts("SCATTER_USER");' />
         <input type="button" class="btn" id="TOTAL_BAR" onclick='javaConnector.updateCharts("TOTAL_BAR");' />
+        <input type="button" class="btn" id="SESSION" onclick='javaConnector.updateCharts("SESSION");' />
         
 
     </div>
