Implementada la métrica silueta #30

--- a/src/main/resources/graphics/ClusterChart.html
+++ b/src/main/resources/graphics/ClusterChart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Charts</title>
+<title>CLuster Chart</title>
 <link rel="stylesheet" type="text/css" href="../css/chart.css" />
 <script type="text/javascript" src="./lib/Chart.js"></script>
 <script type="text/javascript" src="./lib/color-hash.js"></script>
