--- a/src/main/resources/graphics/ClusterChart.html
+++ b/src/main/resources/graphics/ClusterChart.html
@@ -31,6 +31,7 @@
 					datasets : []
 				},
 				options : {
+					animation: false,
 					responsive : true,
 					maintainAspectRatio : false,
 					tooltips : {
