--- a/src/main/resources/graphics/SilhouetteChart.html
+++ b/src/main/resources/graphics/SilhouetteChart.html
@@ -20,6 +20,7 @@
 			datasets : []
 		},
 		options : {
+			animation: false,
 			responsive : true,
 			maintainAspectRatio : false,
 			scales : {
