--- a/src/main/resources/graphics/ClusterChart.html
+++ b/src/main/resources/graphics/ClusterChart.html
@@ -60,6 +60,14 @@
 		myChart.update();
 	}
 	
+	function rename(index, name) {
+		myChart.data.datasets[index].label = name;
+	}
+
+	function update() {
+		myChart.update();
+	}
+	
 	function exportGraphic() {
 		return myChart.toBase64Image();
 	}
