Exportación de los datos de la Silhouette Width #39

--- a/src/main/resources/graphics/SilhouetteChart.html
+++ b/src/main/resources/graphics/SilhouetteChart.html
@@ -76,5 +76,9 @@
 	function update() {
 		myChart.update();
 	}
+
+	function exportGraphic() {
+		return myChart.toBase64Image();
+	}
 </script>
 </html>
