Integrar el gráfico de codo (elbow) #40

--- a/src/main/resources/graphics/SilhouetteChart.html
+++ b/src/main/resources/graphics/SilhouetteChart.html
@@ -39,8 +39,8 @@
 					},
 					scaleLabel : {
 						display : true,
-						fontStyle: "bold",
-						fontSize: 14,
+						fontStyle : "bold",
+						fontSize : 14,
 						labelString : "Silhouette width"
 					}
 				} ]
@@ -52,6 +52,12 @@
 				line : {
 					tension : 0
 				}
+			},
+			tooltips : {
+				enabled : false
+			},
+			hover : {
+				mode : null
 			},
 			layout : {
 				padding : {
